k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: promotions
  labels:
    app: promotions
spec:
  selector:
    app: promotions
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
